<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_constraintBottom_toBottomOf="parent"
    android:id="@+id/constrainFooter"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/idBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/nav_header_desc"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/back"
        android:textColor="@color/purple_700"
        android:textSize="12sp"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
         />



    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/idCancle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/nav_header_desc"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/cancle"
        android:textColor="@color/purple_700"
        android:textSize="12sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="10dp"
        app:layout_constraintEnd_toStartOf="@+id/btnContinue"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnContinue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>
